cmake_minimum_required(VERSION 3.22.0)

project(cmake_homework_10_2)

add_executable(cmake_homework_10_2 
Source.cpp 
EquilateralTriangle.Class.cpp 
Figure.Class.cpp
IsoscelesTriangle.Class.cpp
Parallelogram.Class.cpp 
Quadrilateral.Class.cpp
Rectangle.Class.cpp
Rhombus.Class.cpp
RightTriangle.Class.cpp
Square.Class.cpp
Triangle.Class.cpp
)